<resources>
    <string name="app_name">Birthday Tracker</string>
    <string name="title_birthdays">Birthdays</string>
    <string name="title_settings">Settings</string>

    <string name="error_password_login">Password error! At least 6 characters!</string>
    <string name="error_email_login">E-mail error occured! Check format or don\'t leave it empty!</string>
    <string name="signup_name">Name</string>
    <string name="signup_email">Email</string>
    <string name="signup_password">Password</string>
    <string name="signup_confirmpassword">Confirm password</string>
    <string name="signup_button">Register</string>
    <string name="signup_tv_return_to_login">Already have an account? Login!</string>
    <string name="signup_error_name">Introduce name</string>
    <string name="signup_error_password">Introduce password with minimum 6 letters</string>
    <string name="signup_error_password_match">Make sure the passwords match!</string>
    <string name="sign_up_tv_login">Don\'t have an account? Register here!</string>

    <string name="login_email_text">Email</string>
    <string name="login_password_text">Password</string>

    <string name="profile_activity_email_error">Email is not in correct format!</string>
    <string name="date_format_error">Date format isn\'t correct. Use (dd-MM-yyyy)!</string>

    <string name="select_action">Select action</string>
    <string name="select_photo_gallery">Select photo from gallery</string>
    <string name="capture_photo_camera">Take a new photo</string>
    <string name="google_login">Google Login</string>
    <string name="mail_login">Mail Login</string>
    <string name="channel_name">channel_name</string>
    <string name="channel_description">channel_description</string>
</resources>
